feat: 소모임 관련 요구사항 추가 (#35)
* feat: 그룹 엔티티에 마감기한 필드 추가

* feat: 소모임 생성 요청에 마감시간(endAt) 필드 추가

* feat: 국가, 카테고리별 소모임을 조회하는 api 구현

* refactor: 국가·카테고리별 소모임 조회를 GroupBrowseController로 이전하여 비로그인 접근 허용

* feat: 디데이를 반환하는 함수 추가

* feat: 관심사,지역별로 소모임을 조회하는 api 구현